fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -282,14 +282,14 @@ display:flex;
 justify-content:center;
 align-items:center;
  padding:25px;
-border-radius:24px;
+border-radius:20px;
   background:rgba(17,24,39,0.85);
     border:1px solid rgba(168,85,247,0.25);
     box-shadow:    0 0 30px rgba(168,85,247,0.12);
   backdrop-filter:blur(1px);
   margin-top:20px;
   margin-bottom:20px;
-
+height:350px;
 }
 
 .report-con{
